# aionui-backend

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  Cargo.toml  justfile  release-please-config.json  rustfmt.toml
.cargo/: audit.toml
crates/aionui-ai-agent/: Cargo.toml
crates/aionui-ai-agent/src/: acp_agent.rs  acp_agent_service.rs  acp_protocol.rs  acp_routes.rs  acp_runtime_snapshot.rs  acp_service.rs  agent_manager.rs  agent_registry.rs  agent_routes.rs  agent_runtime.rs  agent_task.rs  aionrs_agent.rs  auxiliary_routes.rs  backend_output_sink.rs  backend_protocol_sink.rs  cli_process.rs  connection_test_routes.rs  factory.rs  first_message_injector.rs  gemini_agent.rs  idle_scanner.rs  lib.rs  nanobot_agent.rs  openclaw_agent.rs  registry.rs  remote_agent.rs  remote_agent_routes.rs  service.rs  service_custom.rs  skill_manager.rs  stream_event.rs  task_manager.rs  team_guide_prompt.rs  types.rs
crates/aionui-ai-agent/tests/: acp_agent_integration.rs  acp_module_surface.rs  agent_types_integration.rs  api_client_integration.rs  factory_provider_integration.rs  middleware_integration.rs  skill_manager_integration.rs
crates/aionui-db/: Cargo.toml
crates/aionui-db/migrations/: 001_initial_schema.sql  002_legacy_data_normalize.sql  006_agent_metadata.sql  007_agent_metadata_sort_order.sql  008_agent_metadata_icon_backfill.sql  011_assistant_override_preset_agent_type.sql  012_agent_metadata_drop_name_unique.sql  012_claude_behavior_policy_flags.sql  013_agent_metadata_drop_name_unique.sql  014_behavior_policy_supports_team.sql  20260412000008_create_mcp_servers_table.sql  20260412000009_create_oauth_tokens_table.sql
crates/aionui-db/src/: database.rs  lib.rs
crates/aionui-db/tests/: channel_repository.rs  client_preference_repository.rs  cron_repository.rs  db_lifecycle.rs  mcp_server_repository.rs  oauth_token_repository.rs  provider_repository.rs  remote_agent_repository.rs  settings_repository.rs  team_repository.rs  user_repository.rs
crates/aionui-office/: Cargo.toml
crates/aionui-static-file/: Cargo.toml
(+438 files in other folders)
