[package]
name = "aionui-db"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
