[package]
name = "aionui-office"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
tokio.workspace = true
reqwest.workspace = true
calamine.workspace = true
sha1.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
rust_xlsxwriter.workspace = true
tokio = { workspace = true, features = ["test-util"] }
