[package]
name = "aionui-static-file"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
mime_guess.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
